--- a/demo/index.html
+++ b/demo/index.html
@@ -37,16 +37,22 @@
 var demo1 = $('select[name="duallistbox_demo1[]"]').bootstrapDualListbox();</pre>
   <form id="demoform" action="#" method="post">
     <select multiple="multiple" size="10" name="duallistbox_demo1[]">
-      <option value="option1">Option 1</option>
-      <option value="option2">Option 2</option>
-      <option value="option3" selected="selected">Option 3</option>
-      <option value="option4">Option 4</option>
-      <option value="option5">Option 5</option>
-      <option value="option6" selected="selected">Option 6</option>
-      <option value="option7">Option 7</option>
-      <option value="option8">Option 8</option>
-      <option value="option9">Option 9</option>
-      <option value="option0">Option 10</option>
+      <optgroup label="Group 1">
+        <option value="option1">Option 1</option>
+        <option value="option2" selected="selected">Option 2</option>
+        <option value="option3" selected="selected" disabled>Disabled Option 3</option>
+      </optgroup>
+      <optgroup label="Group 2">
+        <option value="option4" disabled>Disabled Option 4</option>
+        <option value="option5">Option 5</option>
+      </optgroup>
+      <optgroup label="Group 2">
+        <option value="option6" selected="selected">Option 6</option>
+        <option value="option7">Option 7</option>
+        <option value="option8">Option 8</option>
+        <option value="option9" disabled>Disabled Option 9</option>
+        <option value="option0">Option 10</option>
+      </optgroup>
     </select>
     <br>
     <button type="submit" class="btn btn-default btn-block">Submit data</button>
